project/logs/20250514_160933log
Hello,DirectX!

windth:1280

Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel:12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3D.VS.hlsl,profile:vs_6_0

Object3D.VS.hlsl:11:1: error: Semantic SV_TARGET is invalid for shader model: vs
VertexShaderOutput main(VertexShaderInput input)
^

